# nlplaw

./: .gitignore  README.md  docker-compose.yml  mock_exam_api.py  pyproject.toml  refactor.md  refactoring_session_summary.txt  refactred.txt  test_path.py
DB/Pinecone/: create_index.py  db.py  pinecone_tutorial2.py  temp.txt
DB/import data to postgresql/: docker-composev1.yml  import_db.ipynb
ETL/LawABC_法律百科/: 1.txt_2_json.py
ETL/MOEX_考選部歷屆考題/: 1.Crawler_MOEX_Option.py  2.question_process.py  3.answer_process.py  4.merge_qus_ans.py  5.CSV_to_json.py  5.json_to_CSV.py  6.Combined_json_1.py  7.Combined_json_2.py
ETL/lawgov_全國法規資料庫/: 1.Crawler_lawgov.py
ETL/legal_taichung/: 1.Crawler_taichung.py
LINE/lawbot/: Dockerfile  exam_richmenu.py  lawbot.py  main_richmenu.py  requirements.txt
Pinecone/: _.ipynb  pinecone_tutorial.py  qa-1.csv  高點法律題庫-5.xlsx - 訓練集.csv
api/django_app/: manage.py  requirements.txt
api/flask_app/: Dockerfile  ai_bp.py  app.py  config.py  docker-compose.yml  key_gen.py  (+4 more)
core/: __init__.py  ai.py  exam_api.py  line_api.py  richmenu.py  security.py  spamfilter.py  validation.py
docs/: architecture.mmd
exam_retrieve/: Dockerfile  QA_function.py
langchain/: func_app.py  result.csv
line/: ai_bp.py  app.py  linebot_bp.py  models.py  requirements.txt  spamfilter.py  web_bp.py
postgresql/: Postgresql.py  crud.py  ngest_and_store_vector_data_into_PostgreSQL_using_pgvector.py  test.py
qa_retrieve/: Dockerfile  appv1.py  store_vector_data.py
web/: app.py
web_frontend/: App.jsx  index.html  package.json  style.css  vite.config.js
(+43 files in other folders)
