[tool.poetry]
name = "nlplaw"
version = "0.1.0"
description = ""
authors = ["10622130 <stevenaaa1207@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
line-bot-sdk = "^3.11.0"
pgvector = "^0.2.5"
openai = "^1.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
